tests/baselines/reference/YieldExpression14_es6.errors.txt
YieldExpression14_es6.ts(3,6): error TS1163: A 'yield' expression is only allowed in a generator body.


==== YieldExpression14_es6.ts (1 errors) ====
    class C {
      foo() {
         yield foo
         ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      }
    }